# jaxwing

./: .gitignore  README.md  main.py  pyproject.toml
src/jaxwing/: __init__.py  main.py  physics.py  raytracer.py  world.py
